fast/frames/flattening/iframe-flattening-resize-event-count.html times out on Yosemite WK2 https://bugs.webkit.org/show_bug.cgi?id=144155

Reviewed by Tim Horton.

* WebKitTestRunner/TestController.cpp: (WTR::TestController::resetPreferencesToConsistentValues):
Disable App Nap. I don't have positive evidence that it's the culprit, but it could be,
and we clearly don't want App Nap while testing.



Canonical link: https://commits.webkit.org/162282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183418 268f45cc-cd09-0410-ab3c-d52691b4dbfc